rancher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: rancher/hello-world
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-service
  labels:
    name: rancher-service
  namespace: default
spec:
  selector:
    app: rancher
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
--- #รวมไฟล์ ingress
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress 
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`web.spcn07.local`)
    kind: Rule
    services:
    - name: rancher-service
      port: 80
